Fixes icon alignment on stack front end logos

--- a/src/Stack/Stack.scss
+++ b/src/Stack/Stack.scss
@@ -9,7 +9,7 @@
     
     .logos i { 
         padding: 0.5rem;
-    }
+    } 
     
     .second.tile {
         display: block;
@@ -45,5 +45,10 @@
         .second.title div {
             margin: 0 2.5rem;
         }
+        .front .logos {
+            width: 70%;
+            margin: 0 auto;
+        }
     }
+
 }  
